# modded-nanogpt

./: grace.slurm  pyproject.toml  run.sh  train_gpt.py  train_gpt_medium.py
