[project]
name = "modded-nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "tiktoken>=0.11.0",
    "torch>=2.9.0.dev20250905",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/cu129"
default = true
